css/styles.css
html {
  margin: 0;
  border: 0;
  background-color: #121212;
  color: white;
  font-family: 'Inter', sans-serif;
  letter-spacing: 1px;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  margin: 0;
}

.divider {
  height: 3px;
  width: 100vw;
  background: linear-gradient(180deg,
      rgba(101, 24, 180, 1),
      rgba(147, 88, 247, 1));
}

.big {
  font-size: 3rem;
  font-weight: 800;
  transition: 0.3s;
}

.toggle {
  display: none;
}

.lang {
  display: flex;
  align-items: center;
  padding: 3px 5px 5px;
  justify-content: space-evenly;
  border-radius: 10px;
  border-color: rgba(101, 24, 180, 1);
  color: rgba(101, 24, 180, 1);
  margin: 1rem;
  transition: 0.3s;
  font-weight: 600;
  font-size: 0.75rem;
  letter-spacing: 1.5px;
  height: 30px;
  width: 100px;
  background-color: #151515;
}

button {
  cursor: pointer;
}

h1,
h2,
p {
  margin: 0;
}

main {
  color: #c4c4c4;
}

footer {
  padding: 2rem 0;
  text-align: center;
}

footer img {
  width: 14px;
  position: relative;
  top: 2px;
  margin: 0 1.5px;
}

footer p {
  display: inline-block;
}

footer span {
  color: rgba(101, 24, 180, 1);
  font-weight: bold;
  transition: 0.4s;
}

footer span:hover {
  color: rgb(180, 24, 24);
}

.projetos,
.sobre-mim {
  background-color: #151515;
  z-index: 0;
  position: relative;
}

h1 {
  text-transform: uppercase;
}

h2 {
  font-size: 1rem;
}

header {
  position: fixed;
  width: 100vw;
  z-index: 100;
  top: 0%;
}

nav {
  padding: 0 15%;
  display: flex;
  align-items: center;
  background-color: #151515;
  border-bottom: 2px solid #272727;
  font-weight: bold;
  height: 80px;
  transition: 0.3s;
}

nav.fixed {
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
}

nav ul {
  display: flex;
  justify-content: end;
}

nav ul li {
  list-style: none;
  margin: 10px 30px;
}

nav ul li::after {
  content: '';
  display: block;
  border-bottom: 2px solid rgba(101, 24, 180, 1);
  margin-top: 5px;
  transform: scaleX(0);
  transition: transform 0.3s ease;
}

nav ul li:hover::after {
  transform: scaleX(1);
}

nav p {
  padding: 10px;
  font-size: 1.3rem;
  width: 100%;
}

nav p a {
  color: rgba(101, 24, 180, 1);
  transition: 0.3s;
}

nav p a:hover {
  color: rgba(147, 88, 247, 1);
}

.principal,
.sobre-mim,
.experiencia,
.projetos {
  padding: 6.5% 15%;
  min-height: 35vh;
}

section h1 {
  margin: 2rem 0rem;
}

a {
  text-decoration: none;
  color: white;
}

.principal {
  display: flex;
  justify-content: space-around;
  align-items: center;
  position: relative;
  min-height: 60vh;
}

.principal .scroll {
  position: absolute;
  bottom: 3rem;
  font-weight: bold;
  letter-spacing: 2px;
}

.principal .scroll p {
  padding: 1rem 0;
  display: inline-block;
}

.principal .scroll img {
  -webkit-animation: scroll-down 3s infinite forwards;
  animation: scroll-down 3s infinite forwards;
}

@-webkit-keyframes scroll-down {
  0% {
    opacity: 0;
    transform: translate3d(0, -15px, 0);
  }

  30% {
    opacity: 0;
  }

  60% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    transform: translate3d(0, 10px, 0);
  }
}

@keyframes scroll-down {
  0% {
    opacity: 0;
    transform: translate3d(0, -15px, 0);
  }

  30% {
    opacity: 0;
  }

  60% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    transform: translate3d(0, 10px, 0);
  }
}

.principal__left {
  width: 50%;
  margin: 5rem 0;
}

.principal__right {
  width: 40%;
  margin: 2rem 0;
}

.principal h1 {
  text-transform: uppercase;
  font-size: 1.5rem;
  margin: 1.5rem 0;
}

.principal span {
  font-size: 3rem;
  text-transform: uppercase;
  color: rgb(24, 105, 180);
  font-weight: 600;
  letter-spacing: 3px;
}

.principal .principal__input-cursor {
  width: 3px;
  height: 42px;
  background-color: white;
  display: inline-block;
  position: relative;
  top: 3px;
  -webkit-animation: blink 0.6s infinite alternate;
  animation: blink 0.6s infinite alternate;
}

@-webkit-keyframes blink {
  0% {
    opacity: 1;
  }

  40% {
    opacity: 1;
  }

  60% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

@keyframes blink {
  0% {
    opacity: 1;
  }

  40% {
    opacity: 1;
  }

  60% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.principal__botao,
.sobre-mim__descricao-buttons {
  display: flex;
  width: 350px;
  justify-content: space-between;
}

.principal__botao-twitter,
.principal__botao-github,
.sobre-mim__descricao-buttons-curriculo,
.sobre-mim__descricao-buttons-email,
.projetos__card-button {
  display: flex;
  align-items: center;
  padding: 3px 5px 5px;
  justify-content: space-evenly;
  width: 140px;
  border-radius: 8px;
  position: relative;
  background-color: #121212;
  margin-top: 1rem;
  transition: 0.3s;
  font-weight: 600;
  font-size: 0.95rem;
  letter-spacing: 1.5px;
  height: 40px;
}

.principal__botao-twitter::before,
.sobre-mim__descricao-buttons-email::before,
.projetos__card-button::before {
  content: '';
  position: absolute;
  z-index: -1;
  inset: -2px;
  border-radius: 9px;
  background: linear-gradient(-45deg,
      rgba(147, 88, 247, 1),
      rgba(16, 215, 226, 1));
  background-size: 400%;
  -webkit-animation: move infinite forwards 4s;
  animation: move infinite forwards 4s;
}

.principal__botao-twitter:hover,
.principal__botao-github:hover,
.sobre-mim__descricao-buttons-curriculo:hover,
.sobre-mim__descricao-buttons-email:hover,
.projetos__card-button:hover {
  background-color: #272727;
  text-shadow: 1px 1px 3px #00bbc5;
}

@-webkit-keyframes move {
  0% {
    background-position: 0% 50%;
  }

  50% {
    background-position: 100% 50%;
  }

  100% {
    background-position: 0% 50%;
  }
}

@keyframes move {
  0% {
    background-position: 0% 50%;
  }

  50% {
    background-position: 100% 50%;
  }

  100% {
    background-position: 0% 50%;
  }
}
/* ... */

